[flake8]
max-line-length = 88
extend-ignore = E203,W503
exclude = .git,__pycache__,.venv,build,dist

[metadata]
name = api-test-hub
version = 0.1.0
description = API automated test framework scaffold
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests
    pyyaml
include_package_data = True

[options.package_data]
api_test_hub = templates/init/**/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    api-test-hub=api_test_hub.cli:main
